# tyomarkkinatori_mcp_server

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml  tests.yml
data/: ammatit.json  ammatit_taso_1.json  ammatit_taso_2.json  ammatit_taso_3.json  ammatit_taso_4.json  kunnat.json
mcp_server/: main.py
tests/: test_all_high_occupation_codes.py  test_get_location_codes.py  test_get_low_level_codes.py  test_get_med_level_codes.py  test_read_file_contents.py
